auth has been added
